# course_work_sql

./: README.md  main.py  pyproject.toml
src/: api.py  db.py
