[tool.poetry]
name = "course-work-sql"
version = "0.1.0"
description = ""
authors = ["Sabina9425 <visapa@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
